package br.com.restaurante.entity;


public class Usuario {
}
